# sardine-rs

./: .gitignore  CMakeLists.txt  Cargo.toml  README
bindings/dotnet/: Program.cs
hyper/: Cargo.toml
hyper/src/: lib.rs  srd_scheme.rs  www_authenticate.rs
sardine/: Cargo.toml  wasm_build.sh
sardine/fuzz/: Cargo.toml  README.md
sardine/fuzz/fuzz_targets/: fuzz_basic_auth.rs
sardine/src/: cipher.rs  ffi.rs  lib.rs  srd.rs  srd_errors.rs
sardine/src/blobs/: basic_blob.rs  logon_blob.rs  mod.rs  text_blob.rs
sardine/src/message_types/: mod.rs  srd_accept.rs  srd_confirm.rs  srd_delegate.rs  srd_initiate.rs  srd_message.rs  srd_offer.rs  srd_packet.rs
sardine/src/messages/: mod.rs  srd_accept.rs  srd_confirm.rs  srd_delegate.rs  srd_header.rs  srd_initiate.rs  srd_message.rs  srd_offer.rs  srd_packet.rs
sardine/src/srd_blob/: basic_blob.rs  logon_blob.rs  mod.rs
sardine/src/tests/: mod.rs  secret_sharer_tests.rs  srd_tests.rs
spec/: SRD_Proto.docx
src/: dh_params.rs  lib.rs  main.rs  now_auth_srd.rs  now_auth_srd_errors.rs  srd.rs  srd_errors.rs
src/message_types/: mod.rs  now_auth_srd_challenge.rs  now_auth_srd_confirm.rs  now_auth_srd_delegate.rs  now_auth_srd_message.rs  now_auth_srd_negotiate.rs  now_auth_srd_response.rs  now_auth_srd_result.rs  now_srd_auth_logon_blob.rs  srd_accept.rs  srd_blob.rs  srd_challenge.rs  srd_confirm.rs  srd_delegate.rs  srd_initiate.rs  srd_logon_blob.rs  srd_mac.rs  srd_message.rs  srd_negotiate.rs  srd_offer.rs  srd_packet.rs  srd_response.rs  srd_result.rs
src/srd_blob/: basic_blob.rs  logon_blob.rs  mod.rs
src/tests/: encoding_tests.rs  mod.rs  msg_tests.rs  now_auth_srd_tests.rs  srd_tests.rs
