[package]
name = "sardine-rs"
version = "0.1.0"
authors = ["pdugre"]

[dependencies]
rand = "0.4"
hmac = "0.6.1"
sha2 = "0.7.0"
digest = "0.7.2"

num-bigint = {version = "0.1", default_features = false}
num-traits = {version = "0.1", default_features = false}
num-integer = {version = "0.1", default_features = false}
byteorder = "1.2.1"

[target.'cfg(all(target_arch = "wasm32"))'.dependencies]
rust-crypto = {version = "0.2.36", default_features = false}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
aes-soft = "0.1.0"
