[package]
name = "hyper_sardine"
version = "0.2.1"
license = "MIT/Apache-2.0"
homepage = "https://github.com/wayk/sardine-rs"
repository = "https://github.com/wayk/sardine-rs"
keywords = ["srd", "delegation", "authentication", "protocol"]
description = "Secure Remote Delegation (SRD) Authentication Protocol"
authors = ["Marc-André Moreau <marcandre.moreau@gmail.com>",
           "Philippe Dugre <pdugre@devolutions.net>",
           "François Dubois <francois.dubois.x@gmail.com>"]

[dependencies]
base64 = "0.6"
hyperx = "~0.13.1"
log = "0.4.1"
uuid = { version = "0.6", features = ["v4"] }
