[package]
name = "sardine"
version = "0.1.0"
license = "MIT/Apache-2.0"
homepage = "https://github.com/wayk/sardine-rs"
repository = "https://github.com/wayk/sardine-rs"
keywords = ["srd", "delegation", "authentication", "protocol"]
description = "Secure Remote Delegation (SRD) Authentication Protocol"
authors = ["Marc-André Moreau <marcandre.moreau@gmail.com>",
           "Philippe Dugre <pdugre@devolutions.net>",
           "François Dubois <francois.dubois.x@gmail.com>"]

[lib]
name = "sardine_rs"
crate-type = ["staticlib", "lib"]

[dependencies]
rand = "0.4"
hmac = "0.6"
sha2 = "0.7"
digest = "0.7"
aes-soft = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2.2", optional = true}

num-bigint = {version = "0.1", default_features = false}
num-traits = {version = "0.1", default_features = false}
num-integer = {version = "0.1", default_features = false}
byteorder = "1.2"

libc = "0.2.40"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rust-crypto = "0.2"

[features]
default = []
webassembly = ["aes-soft", "wasm-bindgen"]

