[package]
name = "sardine"
version = "0.1.0"
license = "MIT/Apache-2.0"
homepage = "https://github.com/wayk/sardine-rs"
repository = "https://github.com/wayk/sardine-rs"
keywords = ["srd", "delegation", "authentication", "protocol"]
description = "Secure Remote Delegation (SRD) Authentication Protocol"
authors = ["Marc-André Moreau <marcandre.moreau@gmail.com>",
           "Philippe Dugre <pdugre@devolutions.net>",
           "François Dubois <francois.dubois.x@gmail.com>"]

[lib]
name = "sardine"
crate-type = ["staticlib", "lib", "cdylib"]

[dependencies]
cfg-if = "0.1"
rand = "=0.5.0-pre.2"
hmac = "0.6"
sha2 = "0.7"
digest = "0.7"
chacha = "0.1.0"
wasm-bindgen = { version = "=0.2.8", optional = true}

num-bigint = {version = "0.1", default_features = false}
num-traits = {version = "0.1", default_features = false}
num-integer = {version = "0.1", default_features = false}
aes_frast = {version = "0.1.2", optional = true}

byteorder = "1.2"

libc = "0.2.40"

[features]
default = []
wasm = ["wasm-bindgen"]
aes = ["aes_frast"]
fips = ["aes"]

