[package]
name = "sardine"
version = "0.6.1"
license = "MIT/Apache-2.0"
homepage = "https://github.com/wayk/sardine-rs"
repository = "https://github.com/wayk/sardine-rs"
keywords = ["srd", "delegation", "authentication", "protocol"]
description = "Secure Remote Delegation (SRD) Authentication Protocol"
authors = ["Marc-André Moreau <marcandre.moreau@gmail.com>",
           "Philippe Dugre <pdugre@devolutions.net>",
           "François Dubois <francois.dubois.x@gmail.com>",
           "Salah Kamate <mohamedsalahkamate@gmail.com>",
           "Richard Markiewicz <rmarkiewicz@devolutions.net>"]

[lib]
name = "sardine"
crate-type = ["staticlib", "lib"]

[profile.release]
lto = true

[dependencies]
cfg-if = "0.1"
rand = "0.8"
hmac = "0.11"
sha2 = "0.9"
chacha = "0.1.0"
wasm-bindgen = { version = "0.2", default_features = false, features = ["std"], optional = true }

num-bigint = { version = "0.4", default_features = false }
num-traits = { version = "0.2", default_features = false }
num-integer = { version = "0.1", default_features = false }
aes256 = { package = "aes", version = "0.7", optional = true }
block-modes = {version = "0.8", optional = true}
serde = { version = "1", features = ["derive"], optional = true }

byteorder = "1.2"

libc = "0.2.40"

[features]
default = []
wasm = ["wasm-bindgen"]
aes = ["aes256", "block-modes"]
fips = ["aes"]
ser = ["serde", "num-bigint/serde"]

# Workaround for building webassembly withouth breaking CI. For webassembly, build with --bin. Work currently in progress to allow target based crate-type.
[[example]]
name = "wasm"
path = "src/lib.rs"
crate-type = ["cdylib"]
